@@ -93,3 +93,4 @@ Release 1.2.2
 
 Release 1.2.3
 
+* Implemented FR 1899729 [ERDesignerNG] Table selection for reverse engineer
